--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-hello world i am rymyrth
-http://rymyrth.github.io
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1> Rymyrth </h1>
+    <p> Hi what's up</p>
+  </body>
+</html>
