--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Homepage of Rymyrth</title>
+    <meta charset="utf-8">
+    <style>
+      body {background-color: gray;
+      }
+    </style> 
+  </head>
   <body>
     <h1> Rymyrth </h1>
     <p> Hi what's up</p>
