--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <title>Homepage of Rymyrth</title>
     <meta charset="utf-8">
     <style>
-      body {background-color: gray;
+      body {background-color: rgb(193, 219, 224);
+      }
+      p {font-family:"Lora", serif;
       }
     </style> 
   </head>
   <body>
-    <h1> Rymyrth </h1>
-    <p> Hi what's up</p>
+    <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150>
+    <h1> About Me </h1>
+    <p> I'm a teenager who lives in the US. I participate in piano, Quizbowl, and archery. </p>
   </body>
 </html>
