--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
   </head>
   <body>
     <h1> About Me </h1>
-    <p> I'm a teenager who lives in the US. I participate in piano, Quizbowl, and archery. </p>
-    <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150/>
+    <p> I'm a teenager who lives in the US. I participate in piano, Quizbowl, and archery. I suppose I'll post what I'm studying each day on here. </p>
+    <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg"/>
+    <h2>July 7, 2020: Immanuel Kant</h2>
+    <p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
+      a non-empirical concept is associated with the mental image of an object. Here are some of his works:<p>
+      <ul>
+        <li>Critique of Pure Reason - best known work which was followed by Critique of Judgment and Critique of Practical Reason. <br>
+          Proposed that results from geometry and simple physics might be a potential synthetic a priori truths. <br>
+          The section “The Metaphysical Deduction” explains the evolution of categories (pure concepts of understanding).<br>
+          Statements such as "the soul is simple" and "the soul is a substance" are "paralogisms" of its title subject. </li>
+        <li>Perpetual Peace - a world without war based on constitutional republics</li>
+        <li>Groundwork of the Metaphysics of Morals - outlined the categorical imperative</li>
+    </ul>
+         
   </body>
 </html>
+
+Groundwork of the Metaphysics of Morals - outlined the categorical imperative
+Schema - the way a pure, non-empirical concept is associated with the mental image of an object
