--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
       body {background-color: rgb(193, 219, 224);
       }
       p {font-family:"Lora", serif;
+        background-color: rgb(213, 238, 243);
+      }
+      h1 {font-family:cursive;
+          font-size:40px;
       }
     </style> 
   </head>
   <body>
     <h1> About Me </h1>
-    <p> I'm a teenager who lives in the US. I participate in piano, Quizbowl, and archery. I suppose I'll post what I'm studying each day on here. </p>
+    <p> I'm a random teenager who is really bored. Here's some boring quizbowl info. There's also a picture of a wolf. </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
     <h2>July 7, 2020: Immanuel Kant</h2>
     <p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
@@ -25,7 +29,21 @@
         <li><strong>Perpetual Peace</strong> - a world without war based on constitutional republics</li>
         <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the categorical imperative</li>
     </ul>
-         
+    <p> Here is some more info about him that I'm too lazy to format properly.<br>
+      This thinker’s Inaugural Essay distinguished between intellectual thought and sensible receptivity.<br>
+      He expanded on Swedenborg’s nebular hypothesis of the formation of the solar system. <br>
+      In one work, this philosopher defined the Enlightenment by the phrase "Sapere aude," or "Dare to know," maintaining that one should think autonomously. <br>
+      this author of Groundwork on the Metaphysics of Morals, in which he introduced his categorical imperative,<br>
+      also wrote a work splitting synthetic and analytic judgments into a priori and a posteriori types. 
+      <br><br>
+      AND
+     <br><br>
+      One work by this author requires a world of constitutional republics to attain the namesake state of Perpetual Peace.<br>
+      The first formulation of one of this ethical theories states that one should only act if that action should become universal law,<br>
+      while his most famous work includes a debunking of the ontological proof of God's existence in the course of studying a priori synthetic judgments. <br>
+      The formulator of the categorical imperative, name this German philosopher and author of Critique of Pure Reason and Critique of Practical Reason.</p>
+    
+    <h1> HI LIZ</h1>
   </body>
 </html>
 
