--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       }
       p {font-family:"Lora", serif;
         background-color: rgb(213, 238, 243);
+      ul {list-style-type: circle;
+          background-color: rgb(213, 238, 243);
       }
       h1 {font-family:cursive;
           font-size:40px;
@@ -16,7 +18,7 @@
   </head>
   <body>
     <h1> About Me </h1>
-    <p> I'm a random teenager who is really bored. Here's some boring quizbowl info. There's also a picture of a wolf. </p>
+    <p> I'm a random teenager who is really bored. Here's some boring info. There's also a picture of a wolf. </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
     <h2>July 7, 2020: Immanuel Kant</h2>
     <p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
@@ -43,7 +45,7 @@
       while his most famous work includes a debunking of the ontological proof of God's existence in the course of studying a priori synthetic judgments. <br>
       The formulator of the categorical imperative, name this German philosopher and author of Critique of Pure Reason and Critique of Practical Reason.</p>
     
-    <h1> HI LIZ</h1>
+ 
   </body>
 </html>
 
