--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       body {background-color: rgb(193, 219, 224);
       }
-      p {font-family:"Lora", serif;
+      p {font-family:"Lucida", serif;
         background-color: rgb(213, 238, 243);
       ul {list-style-type: circle;
           background-color: rgb(213, 238, 243);
