--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <style>
       body {background-color: rgb(193, 219, 224);
       }
-      p {font-family:"Lucida", serif;
+      p {font-family:"lucida", serif;
         background-color: rgb(213, 238, 243);
-      ul {list-style-type: circle;
-          background-color: rgb(213, 238, 243);
+    #kant {background-color: rgb(213, 238, 243);
       }
       h1 {font-family:cursive;
           font-size:40px;
@@ -31,7 +30,7 @@
         <li><strong>Perpetual Peace</strong> - a world without war based on constitutional republics</li>
         <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the categorical imperative</li>
     </ul>
-    <p> Here is some more info about him that I'm too lazy to format properly.<br>
+    <div id="kant"><p> Here is some more info about him that I'm too lazy to format properly.<br>
       This thinker’s Inaugural Essay distinguished between intellectual thought and sensible receptivity.<br>
       He expanded on Swedenborg’s nebular hypothesis of the formation of the solar system. <br>
       In one work, this philosopher defined the Enlightenment by the phrase "Sapere aude," or "Dare to know," maintaining that one should think autonomously. <br>
@@ -43,7 +42,7 @@
       One work by this author requires a world of constitutional republics to attain the namesake state of Perpetual Peace.<br>
       The first formulation of one of this ethical theories states that one should only act if that action should become universal law,<br>
       while his most famous work includes a debunking of the ontological proof of God's existence in the course of studying a priori synthetic judgments. <br>
-      The formulator of the categorical imperative, name this German philosopher and author of Critique of Pure Reason and Critique of Practical Reason.</p>
+      The formulator of the categorical imperative, name this German philosopher and author of Critique of Pure Reason and Critique of Practical Reason.</p></div>
     
  
   </body>
