--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <title>Homepage of Rymyrth</title>
     <meta charset="utf-8">
     <style>
-      body {background-color: rgb(193, 219, 224);
+      body {background-color:Azure;
       }
-      p {font-family:"lucida", serif;
-        background-color: rgb(213, 238, 243);
-    #kant {background-color: rgb(213, 238, 243);
+    #kant {background-color: AliceBlue;
       }
       h1 {font-family:cursive;
           font-size:40px;
