--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Homepage of Rymyrth</title>
     <meta charset="utf-8">
     <style>
-      body {background-color:Azure;
+      body {background-color:Gainsboro;
       }
     #kant {background-color: AliceBlue;
       }
-      h1 {font-family:cursive;
+      h1 {font-family:sans-serif;
           font-size:40px;
       }
     </style> 
@@ -18,7 +18,7 @@
     <p> I'm a random teenager who is really bored. Here's some boring info. There's also a picture of a wolf. </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
     <h2>July 7, 2020: Immanuel Kant</h2>
-    <p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
+    <div id="kant"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
       a non-empirical concept is associated with the mental image of an object. Here are some of his works:<p>
       <ul>
         <li><strong>Critique of Pure Reason</strong> - best known work which was followed by Critique of Judgment and Critique of Practical Reason. <br>
@@ -28,7 +28,7 @@
         <li><strong>Perpetual Peace</strong> - a world without war based on constitutional republics</li>
         <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the categorical imperative</li>
     </ul>
-    <div id="kant"><p> Here is some more info about him that I'm too lazy to format properly.<br>
+    <p> Here is some more info about him that I'm too lazy to format properly.<br>
       This thinker’s Inaugural Essay distinguished between intellectual thought and sensible receptivity.<br>
       He expanded on Swedenborg’s nebular hypothesis of the formation of the solar system. <br>
       In one work, this philosopher defined the Enlightenment by the phrase "Sapere aude," or "Dare to know," maintaining that one should think autonomously. <br>
