--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </style> 
   </head>
   <body>
+    <div style = "background-color: #FFFFFF; padding: 15px; border:solid; border-width:1.5px; border-color:#A9ACAD">
     <h1> About Me </h1>
     <p> I'm a random teenager who is really bored. Here's some boring info. There's also a picture of a wolf. </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
@@ -44,7 +45,7 @@
       The formulator of the categorical imperative, name this German philosopher and author of Critique of Pure Reason and Critique of Practical Reason.</p></div>
     
  
-  </body>
+      </body></div>
 </html>
 
 
