--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style> 
   </head>
   <body>
-    <div style = "background-color: #FFFFFF; padding: 15px; border:solid; border-width:1.5px; border-color:#A9ACAD">
+    <div style = "background-color: #e3e0dc; padding: 30px; border:solid; border-width:2px; border-color:#A9ACAD">
     <h1> About Me </h1>
     <p> I'm a random teenager who is really bored. Here's some boring info. There's also a picture of a wolf. </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
