--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </style> 
   </head>
   <body>
-    <div style = "background-color: #e3e0dc; padding: 30px; border:solid; border-width:2px; border-color:#A9ACAD">
+    <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:#A9ACAD">
     <h1> About Me </h1>
     <p> I'm a random teenager who is really bored. Here's some boring info. There's also a picture of a wolf. </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
     <h2>July 7, 2020: Immanuel Kant</h2>
-    <div id="kant"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
+    <div id="kant" style = "background-color: #d8dfe3; border:solid; border-width:3px; border-color: #272a2b"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
       a non-empirical concept is associated with the mental image of an object. Here are some of his works:<p>
       <ul>
         <li><strong>Critique of Pure Reason</strong> - best known work which was followed by Critique of Judgment and Critique of Practical Reason. <br>
