--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
       }
       h1 {font-family:sans-serif;
           font-size:40px;
+          text-align: center;
+      }
+    #intro {text-align: center;
       }
     </style> 
   </head>
   <body>
-    <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:#A9ACAD">
-    <h1> About Me </h1>
-    <p> I'm a random teenager who is really bored. Here's some boring info. There's also a picture of a wolf. </p>
+    <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
+    <h1> What is this? </h1>
+    <p id="intro"> A strange compedium of Quizbowl info depending on whether I'm feeling motivated or not each day. Very boring.<br>
+      Also Rymyrth needs to make a table of contents.</p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
     <h2>July 7, 2020: Immanuel Kant</h2>
-    <div id="kant" style = "background-color: #d8dfe3; border:solid; border-width:3px; border-color: #272a2b"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
+    <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
       a non-empirical concept is associated with the mental image of an object. Here are some of his works:<p>
       <ul>
         <li><strong>Critique of Pure Reason</strong> - best known work which was followed by Critique of Judgment and Critique of Practical Reason. <br>
