--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
       h1 {font-family:sans-serif;
           font-size:40px;
           text-align: center;
+          text-decoration: underline;
       }
     #intro {text-align: center;
+      }
+    #Toc {list-style-type: upper-roman;
+          opacity:70%;
       }
     </style> 
   </head>
@@ -22,8 +26,13 @@
     <h1> What is this? </h1>
     <p id="intro"> A strange compedium of Quizbowl info depending on whether I'm feeling motivated or not each day. Very boring.<br>
       Also Rymyrth needs to make a table of contents.</p>
-    <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" />
-    <h2>July 7, 2020: Immanuel Kant</h2>
+    <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" /> 
+      <h1> Table of Contents </h1>
+      <ol id="ToC"> 
+        <li><a href="#Kant">July 7, 2020: Immanuel Kant</a></li>
+        <li>July 8, 2020: Georg Wilhelm Friedrich Hegel (hopefully)</li>
+      </ol>
+    <h2 id="Kant">July 7, 2020: Immanuel Kant</h2>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
       a non-empirical concept is associated with the mental image of an object. Here are some of his works:<p>
       <ul>
