--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       }
     #intro {text-align: center;
       }
-    #Toc {list-style-type: upper-roman;
-          opacity:70%;
+    #Toc {opacity:0.8;
+          text-align: center;
       }
     </style> 
   </head>
   <body>
     <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
     <h1> What is this? </h1>
-    <p id="intro"> A strange compedium of Quizbowl info depending on whether I'm feeling motivated or not each day. Very boring.<br>
-      Also Rymyrth needs to make a table of contents.</p>
+    <p id="intro"> A strange compedium of Quizbowl content depending on whether I'm feeling motivated or not each day. Very boring.<br>
+      idk what to put here </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" /> 
       <h1> Table of Contents </h1>
-      <ol id="ToC"> 
+      <ol id="ToC" type="i"> 
         <li><a href="#Kant">July 7, 2020: Immanuel Kant</a></li>
         <li>July 8, 2020: Georg Wilhelm Friedrich Hegel (hopefully)</li>
       </ol>
