--- a/index.html
+++ b/index.html
@@ -30,35 +30,43 @@
       <h1> Table of Contents </h1>
       <ol id="ToC" type="i"> 
         <li><a href="#Kant">July 7, 2020: Immanuel Kant</a></li>
-        <li>July 8, 2020: Georg Wilhelm Friedrich Hegel (hopefully)</li>
+        <li><a href="#Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel<a></li>
       </ol>
     <h2 id="Kant">July 7, 2020: Immanuel Kant</h2>
-    <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b"><p> This is a random German philosopher who was a professor at the University of Königsberg. He used the term <em>schema</em> to mean the way <br>
-      a non-empirical concept is associated with the mental image of an object. Here are some of his works:<p>
+    <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
+      <p> This is a random German philosopher who was a professor at the University of Königsberg. 
+        He used the term <em>schema</em> to mean the way a non-empirical concept is associated with the mental image of an object. <br>
+        Here are some of his works:</p>
       <ul>
         <li><strong>Critique of Pure Reason</strong> - best known work which was followed by Critique of Judgment and Critique of Practical Reason. <br>
           Proposed that results from geometry and simple physics might be a potential synthetic a priori truths. <br>
           The section “The Metaphysical Deduction” explains the evolution of categories (pure concepts of understanding).<br>
-          Statements such as "the soul is simple" and "the soul is a substance" are "paralogisms" of its title subject. </li>
+          Statements such as "the soul is simple" and "the soul is a substance" are "paralogisms" of its title subject.<br>
+          A priori judgments debunk proof of God’s existence.  </li>
         <li><strong>Perpetual Peace</strong> - a world without war based on constitutional republics</li>
-        <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the categorical imperative</li>
+        <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the categorical imperative<br> (one should only act if that action should become universal law)</li>
+        <li><strong>Answering the Question: What is Enlightenment?</strong> - he used the phrase <em>sapere aude</em> (dare to know)<br>
+          saying that one should think autonomously</li>
+        <li><strong>Inaugural Essay</strong> - difference between intellectual thought and sensible receptivity</li>
     </ul>
-    <p> Here is some more info about him that I'm too lazy to format properly.<br>
-      This thinker’s Inaugural Essay distinguished between intellectual thought and sensible receptivity.<br>
-      He expanded on Swedenborg’s nebular hypothesis of the formation of the solar system. <br>
-      In one work, this philosopher defined the Enlightenment by the phrase "Sapere aude," or "Dare to know," maintaining that one should think autonomously. <br>
-      this author of Groundwork on the Metaphysics of Morals, in which he introduced his categorical imperative,<br>
-      also wrote a work splitting synthetic and analytic judgments into a priori and a posteriori types. 
-      <br><br>
-      AND
-     <br><br>
-      One work by this author requires a world of constitutional republics to attain the namesake state of Perpetual Peace.<br>
-      The first formulation of one of this ethical theories states that one should only act if that action should become universal law,<br>
-      while his most famous work includes a debunking of the ontological proof of God's existence in the course of studying a priori synthetic judgments. <br>
-      The formulator of the categorical imperative, name this German philosopher and author of Critique of Pure Reason and Critique of Practical Reason.</p></div>
+    </div>
     
- 
-      </body></div>
+    <h2 id="Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel</h2>
+      <div id="hegel" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
+        <p>German philosopher, founder of absolute idealism. Influenced Karl Marx</p>
+        <ul>
+          <li><strong>Hegel Dialectic</strong> - describes the synthesis resolving the conflict between the inevitable antithesis and the pre-existing thesis. <br>
+            Also describes development in 3 stages: in itself, out of itself, and in and for itself (thesis, antithesis, and synthesis)</li>
+          <li><strong>The Phenomenology of Spirit</strong> - describes a collective consciousness called the geist and the development of self-consciousness<br>
+            out of two forces in the master-slave dialectic (common name for one famous passage)</li>
+          <li><strong>The Philosophy of History</strong> - argued that “the State is actually an existing realized moral life"</li>
+          <li><strong>The Positivity of the Christian Religion</strong></li>
+          <li><strong>Elements of the Philosophy of Right</strong> - discussed the concept of <em>Sittlichkeit</em> (ethical life) and<br>
+            criticized a work by Karl Ludwig von Hallerby </li>
+          <li><strong>Encyclopedia of the Philosophical Sciences</strong> which includes some of his earlier <em>The Science of Logic</em></li>
+        </ul></div>
+
+  </body>
 </html>
 
 
