--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="#Kant">July 7, 2020: Immanuel Kant</a></li>
         <li><a href="#Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel<a></li>
       </ol>
-    <h2 id="Kant">July 7, 2020: Immanuel Kant</h2>
+    <h2 id="Kant">July 7, 2020: Immanuel Kant</h2><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
       <p> This is a random German philosopher who was a professor at the University of Königsberg. 
         He used the term <em>schema</em> to mean the way a non-empirical concept is associated with the mental image of an object. <br>
@@ -44,21 +44,21 @@
           Statements such as "the soul is simple" and "the soul is a substance" are "paralogisms" of its title subject.<br>
           A priori judgments debunk proof of God’s existence.  </li>
         <li><strong>Perpetual Peace</strong> - a world without war based on constitutional republics</li>
-        <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the categorical imperative<br> (one should only act if that action should become universal law)</li>
+        <li><strong>Groundwork of the Metaphysics of Morals</strong> - outlined the <em>categorical imperative</em><br> (one should only act if that action should become universal law)</li>
         <li><strong>Answering the Question: What is Enlightenment?</strong> - he used the phrase <em>sapere aude</em> (dare to know)<br>
           saying that one should think autonomously</li>
         <li><strong>Inaugural Essay</strong> - difference between intellectual thought and sensible receptivity</li>
     </ul>
     </div>
     
-    <h2 id="Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel</h2>
+    <h2 id="Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel</h2> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
       <div id="hegel" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
         <p>German philosopher, founder of absolute idealism. Influenced Karl Marx</p>
         <ul>
           <li><strong>Hegel Dialectic</strong> - describes the synthesis resolving the conflict between the inevitable antithesis and the pre-existing thesis. <br>
             Also describes development in 3 stages: in itself, out of itself, and in and for itself (thesis, antithesis, and synthesis)</li>
-          <li><strong>The Phenomenology of Spirit</strong> - describes a collective consciousness called the geist and the development of self-consciousness<br>
-            out of two forces in the master-slave dialectic (common name for one famous passage)</li>
+          <li><strong>The Phenomenology of Spirit</strong> - describes a collective consciousness called the <em>geist</em> and the development of self-consciousness<br>
+            out of two forces in the <em>master-slave dialectic</em> (common name for one famous passage)</li>
           <li><strong>The Philosophy of History</strong> - argued that “the State is actually an existing realized moral life"</li>
           <li><strong>The Positivity of the Christian Religion</strong></li>
           <li><strong>Elements of the Philosophy of Right</strong> - discussed the concept of <em>Sittlichkeit</em> (ethical life) and<br>
