--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
     </style> 
   </head>
   <body>
+    <div style="position:fixed; left:5px; top:90%; overflow:visible; z-index:9999;">
+      <div style="color: black; font-family:Times; background-color:White;font-size: 9pt; padding: 5px; border-style:solid; border-size:2px; border-color:#1a8cff">Rymyrth is cool!</div></div>
     <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
     <h1> What is this? </h1>
-    <p id="intro"> A strange compedium of Quizbowl content depending on whether I'm feeling motivated or not each day. Very boring.<br>
+    <p id="intro"> A compedium of Quizbowl content. Very boring.<br>
       idk what to put here </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" /> 
       <h1> Table of Contents </h1>
       <ol id="ToC" type="i"> 
         <li><a href="#Kant">July 7, 2020: Immanuel Kant</a></li>
-        <li><a href="#Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel<a></li>
+        <li><a href="#Hegel">Also July 7, 2020: Georg Wilhelm Friedrich Hegel<a></li>
       </ol>
     <h2 id="Kant">July 7, 2020: Immanuel Kant</h2><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
@@ -51,7 +53,7 @@
     </ul>
     </div>
     
-    <h2 id="Hegel">July 8, 2020: Georg Wilhelm Friedrich Hegel</h2> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
+    <h2 id="Hegel">July 7, 2020: Georg Wilhelm Friedrich Hegel</h2> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
       <div id="hegel" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
         <p>German philosopher, founder of absolute idealism. Influenced Karl Marx</p>
         <ul>
