--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div style="position:fixed; left:5px; top:90%; overflow:visible; z-index:9999;">
-      <div style="color: black; font-family:Times; background-color:White;font-size: 9pt; padding: 5px; border-style:solid; border-size:2px; border-color:#1a8cff">Rymyrth is cool!</div></div>
+      <div style="color: black; font-family:Times; background-color:White;font-size: 9pt; padding: 5px; border-style:solid; border-size:2px; border-color:#2cdbd5">Wheeehehehehehe</div></div>
     <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
     <h1> What is this? </h1>
     <p id="intro"> A compedium of Quizbowl content. Very boring.<br>
