--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
   <body>
     <div style="position:fixed; left:5px; top:90%; overflow:visible; z-index:9999;">
       <div style="color: black; font-family:Times; background-color:White;font-size: 9pt; padding: 5px; border-style:solid; border-size:2px; border-color:#2cdbd5">Wheeehehehehehe</div></div>
-    <div style = "background-color: #f5f2ed; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
+    <div style = "background-color: #cad9eb; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
     <h1> What is this? </h1>
     <p id="intro"> A compedium of Quizbowl content. Very boring.<br>
       idk what to put here </p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" /> 
+      <hr>
       <h1> Table of Contents </h1>
-      <ol id="ToC" type="i"> 
-        <li><a href="#Kant">July 7, 2020: Immanuel Kant</a></li>
-        <li><a href="#Hegel">Also July 7, 2020: Georg Wilhelm Friedrich Hegel<a></li>
+      <p><strong> Philosophers:</strong></p>
+      <ol id="ToC" type="I"> 
+        <li><a href="#Kant">7/7/20: Immanuel Kant</a></li>
+        <li><a href="#Hegel">7/7/20: Georg Wilhelm Friedrich Hegel<a></li>
       </ol>
-    <h2 id="Kant">July 7, 2020: Immanuel Kant</h2><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
+      <p><strong> Artists:</strong></p>
+    <h3 id="Kant">July 7, 2020: Immanuel Kant</h2><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
       <p> This is a random German philosopher who was a professor at the University of Königsberg. 
         He used the term <em>schema</em> to mean the way a non-empirical concept is associated with the mental image of an object. <br>
@@ -53,7 +56,7 @@
     </ul>
     </div>
     
-    <h2 id="Hegel">July 7, 2020: Georg Wilhelm Friedrich Hegel</h2> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
+    <h3 id="Hegel">July 7, 2020: Georg Wilhelm Friedrich Hegel</h2> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
       <div id="hegel" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
         <p>German philosopher, founder of absolute idealism. Influenced Karl Marx</p>
         <ul>
