--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style> 
   </head>
   <body>
-    <div style="position:fixed; left:5px; top:90%; overflow:visible; z-index:9999;">
+    <div style="position:fixed; right:5px; top:90%; overflow:visible; z-index:9999;">
       <div style="color: black; font-family:Times; background-color:White;font-size: 9pt; padding: 5px; border-style:solid; border-size:2px; border-color:#2cdbd5">Wheeehehehehehe</div></div>
     <div style = "background-color: #cad9eb; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
     <h1> What is this? </h1>
@@ -37,6 +37,9 @@
         <li><a href="#Hegel">7/7/20: Georg Wilhelm Friedrich Hegel<a></li>
       </ol>
       <p><strong> Artists:</strong></p>
+      <ol>
+        <li>Joan Miró</li>
+      </ol>
     <h3 id="Kant">July 7, 2020: Immanuel Kant</h2><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
       <p> This is a random German philosopher who was a professor at the University of Königsberg. 
@@ -70,6 +73,10 @@
             criticized a work by Karl Ludwig von Hallerby </li>
           <li><strong>Encyclopedia of the Philosophical Sciences</strong> which includes some of his earlier <em>The Science of Logic</em></li>
         </ul></div>
+          
+          <h3 id="Miró>July 8, 2020: Joan Miró</h3>
+              <div id="miró" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
+              <p>Either Italian or Spanish or smth abstract painter</p></div>                                                                                                                     
 
   </body>
 </html>
