--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <ol>
         <li>Joan Miró</li>
       </ol>
-    <h3 id="Kant">July 7, 2020: Immanuel Kant</h2><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
+    <h3 id="Kant">July 7, 2020: Immanuel Kant</h3><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
       <p> This is a random German philosopher who was a professor at the University of Königsberg. 
         He used the term <em>schema</em> to mean the way a non-empirical concept is associated with the mental image of an object. <br>
@@ -59,7 +59,7 @@
     </ul>
     </div>
     
-    <h3 id="Hegel">July 7, 2020: Georg Wilhelm Friedrich Hegel</h2> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
+    <h3 id="Hegel">July 7, 2020: Georg Wilhelm Friedrich Hegel</h3> <img src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Hegel_by_Schlesinger.jpg" width="100"/>
       <div id="hegel" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
         <p>German philosopher, founder of absolute idealism. Influenced Karl Marx</p>
         <ul>
@@ -74,9 +74,9 @@
           <li><strong>Encyclopedia of the Philosophical Sciences</strong> which includes some of his earlier <em>The Science of Logic</em></li>
         </ul></div>
           
-          <h3 id="Miró>July 8, 2020: Joan Miró</h3>
+          <h3 id="Miró">July 8, 2020: Joan Miró</h3>
               <div id="miró" style="background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
-              <p>Either Italian or Spanish or smth abstract painter</p></div>                                                                                                                     
+              <p>Spanish Surrealist painter, sculptor, and ceramicist </p></div>                                                                                                                     
 
   </body>
 </html>
