--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="#Hegel">7/7/20: Georg Wilhelm Friedrich Hegel<a></li>
       </ol>
       <p><strong> Artists:</strong></p>
-      <ol>
+      <ol type="I">
         <li>Joan Miró</li>
       </ol>
     <h3 id="Kant">July 7, 2020: Immanuel Kant</h3><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
