--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </ol>
       <p><strong> Artists:</strong></p>
       <ol type="I">
-        <li>Joan Miró</li>
+        <li><a href="#Miró">Joan Miró</li>
       </ol>
     <h3 id="Kant">July 7, 2020: Immanuel Kant</h3><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
@@ -80,12 +80,13 @@
                 During the Spanish Civil War, his art went into a "wild period." A museum is dedicated to him in his hometown of Barcelona. <br>
                 He also made over 250 illustrated books and in later years, explored gas sculpture. </p>   
               <ul> 
-                <li><strong>The Farm</strong></li>
-                <li><strong>Constellations (series)</strong></li>
-                <li><strong>Lunar Bird</strong></li>
-                <li><strong>The Hunter (Catalan Landscape)</strong></li>
-                <li><strong>The Harlequin's Carnival</strong></li>
-                <li><strong>Wall of the Moon</strong>and <strong>Wall of the Sun</strong> - ceramic murals at the UNESCO building in Paris</li>
+                <li><strong>The Farm</strong></li><img src="https://upload.wikimedia.org/wikipedia/en/3/33/TheFarmMiro21to22.jpg" width="100" />
+                <li><strong>Constellations (series)</strong></li> <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/39/MiroMorningStar.JPG/240px-MiroMorningStar.JPG" width="100" />
+                <li><strong>Lunar Bird</strong></li> ><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Hirshhorn_Sculpture_Garden_--_May_2005_--_011.jpg/1200px-Hirshhorn_Sculpture_Garden_--_May_2005_--_011.jpg" width="100" />
+                <li><strong>The Hunter (Catalan Landscape)</strong></li> 
+                <li><strong>The Harlequin's Carnival</strong></li> <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/The_Harlequin%27s_Carnival.jpg" width="100" />
+                <li><strong>Wall of the Moon</strong>and <strong>Wall of the Sun</strong> - ceramic murals at the UNESCO building in Paris</li> 
+                <img src="https://upload.wikimedia.org/wikipedia/en/3/3d/Wall_of_the_Sun.jpg" width="100" />
           </ul></div>  
            
                 
