--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <div style="color: black; font-family:Times; background-color:White;font-size: 9pt; padding: 5px; border-style:solid; border-size:2px; border-color:#2cdbd5">Wheeehehehehehe</div></div>
     <div style = "background-color: #cad9eb; padding: 50px; border:solid; border-width:3px; border-color:##18191a">
     <h1> What is this? </h1>
-    <p id="intro"> A compedium of Quizbowl content. Very boring.<br>
-      idk what to put here </p>
+    <p id="intro"> A compedium of Quizbowl content. Very boring.</p>
     <img src="https://storage.needpix.com/rsynced_images/wolf-3960938_1280.jpg" width="150" /> 
       <hr>
       <h1> Table of Contents </h1>
@@ -38,7 +37,7 @@
       </ol>
       <p><strong> Artists:</strong></p>
       <ol type="I">
-        <li><a href="#Miró">Joan Miró</li>
+        <li><a href="#Miró">Joan Miró</a></li>
       </ol>
     <h3 id="Kant">July 7, 2020: Immanuel Kant</h3><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Kant_gemaelde_3.jpg" width="100"/>
     <div id="kant" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
@@ -82,10 +81,10 @@
               <ul> 
                 <li><strong>The Farm</strong></li><img src="https://upload.wikimedia.org/wikipedia/en/3/33/TheFarmMiro21to22.jpg" width="100" />
                 <li><strong>Constellations (series)</strong></li> <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/39/MiroMorningStar.JPG/240px-MiroMorningStar.JPG" width="100" />
-                <li><strong>Lunar Bird</strong></li> ><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Hirshhorn_Sculpture_Garden_--_May_2005_--_011.jpg/1200px-Hirshhorn_Sculpture_Garden_--_May_2005_--_011.jpg" width="100" />
+                <li><strong>Lunar Bird</strong></li> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Hirshhorn_Sculpture_Garden_--_May_2005_--_011.jpg/1200px-Hirshhorn_Sculpture_Garden_--_May_2005_--_011.jpg" width="100" />
                 <li><strong>The Hunter (Catalan Landscape)</strong></li> 
                 <li><strong>The Harlequin's Carnival</strong></li> <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/The_Harlequin%27s_Carnival.jpg" width="100" />
-                <li><strong>Wall of the Moon</strong>and <strong>Wall of the Sun</strong> - ceramic murals at the UNESCO building in Paris</li> 
+                <li><strong>Wall of the Moon</strong> and <strong>Wall of the Sun</strong> - ceramic murals at the UNESCO building in Paris</li> 
                 <img src="https://upload.wikimedia.org/wikipedia/en/3/3d/Wall_of_the_Sun.jpg" width="100" />
           </ul></div>  
            
