--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       <h1> Table of Contents </h1>
       <p><strong> Philosophers:</strong></p>
       <ol id="ToC" type="I"> 
-        <li><a href="#Kant">7/7/20: Immanuel Kant</a></li>
-        <li><a href="#Hegel">7/7/20: Georg Wilhelm Friedrich Hegel<a></li>
+        <li><a href="#Kant">Immanuel Kant</a></li>
+        <li><a href="#Hegel">Georg Wilhelm Friedrich Hegel<a></li>
+        <li><a href="#Nietzsche">Friedrich Nietzsche</a></li>
       </ol>
       <p><strong> Artists:</strong></p>
       <ol type="I">
@@ -75,7 +76,7 @@
           
          <h3 id="Nietzsche">July 8, 2020: Friedrich Nietzsche</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Nietzsche187a.jpg/440px-Nietzsche187a.jpg" width="100"/>
          <div id="nietzsche" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
-            <p>German philosopher, the youngest to hold the Chair of Classical Philology. At 44, he suffered a loss of his mental faculties.<br>
+           <p><em>German philosopher</em>, the youngest to hold the Chair of Classical Philology. At 44, he suffered a loss of his mental faculties.<br>
                Attributed his wisdom to the sensitivity of the weight of others. Eternal reoccurrence is his idea that<br> 
               with infinite time and a finite number of events, they will reoccur indefinitely. </p>
             <ul>
