--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          <h3 id="Nietzsche">July 8, 2020: Friedrich Nietzsche</h3><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Nietzsche187a.jpg/440px-Nietzsche187a.jpg" width="100"/>
          <div id="nietzsche" style = "background-color: #d8dfe3; padding: 10px; border:solid; border-width:2px; border-color: #272a2b">
            <p><em>German philosopher</em>, the youngest to hold the Chair of Classical Philology. At 44, he suffered a loss of his mental faculties.<br>
-               Attributed his wisdom to the sensitivity of the weight of others. Eternal reoccurrence is his idea that<br> 
+               Attributed his wisdom to the sensitivity of the weight of others. Eternal reoccurrence is his idea that
               with infinite time and a finite number of events, they will reoccur indefinitely. </p>
             <ul>
               <li><strong>Thus Spoke Zarathustra</strong> - discusses the ubermensch (ideal future man) </li>
