--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Homepage of Rymyrth</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
     <style>
       body {background-color:Gainsboro;
       }
@@ -18,6 +19,8 @@
       }
     #Toc {opacity:0.8;
           text-align: center;
+      }
+    p {font-family: 'Alegreya', serif;
       }
     </style> 
   </head>
