--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                     <li><strong>El Espolio (The Disrobing of Christ)</strong> - shows Christ being strupped of his clothing before crucifixion. <br>
                       He is peaceful compared to the ugly faces and violence around him. The 3 Marys are in the left foreground. </li>
                     <li><strong>The Martyrdom of St. Maurice</strong> - Maurice is in a blue breastplate and red tunic surrounded by legion officers. <br>
-                    They decide whether to sacrifice to the pagan gods or accept martyrdom.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Martirio_de_San_Mauricio_El_Greco.jpg/600px-Martirio_de_San_Mauricio_El_Greco.jpg"/>
+                    They decide whether to sacrifice to the pagan gods or accept martyrdom.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Martirio_de_San_Mauricio_El_Greco.jpg/600px-Martirio_de_San_Mauricio_El_Greco.jpg" width="100"/>
                     <li><strong>The Burial of the Count of Orgaz</strong> - divided into 2 sections: the heavens above and the terrestrial below.<br>
-                      Saints Stephen and Augustine have arrived to bury the Count after his murder. Commissioned by Andrés Nuñes. </li> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/El_Greco_-_The_Burial_of_the_Count_of_Orgaz.JPG/600px-El_Greco_-_The_Burial_of_the_Count_of_Orgaz.JPG"/>
-                    <li><strong>View of Toledo</strong> - vibrant and unusual landscape with the Castle of San Servando in the background.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/View_of_Toledo_MET_DP349564.jpg/600px-View_of_Toledo_MET_DP349564.jpg"/>
+                      Saints Stephen and Augustine have arrived to bury the Count after his murder. Commissioned by Andrés Nuñes. </li> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/El_Greco_-_The_Burial_of_the_Count_of_Orgaz.JPG/600px-El_Greco_-_The_Burial_of_the_Count_of_Orgaz.JPG" width="100"/>
+                    <li><strong>View of Toledo</strong> - vibrant and unusual landscape with the Castle of San Servando in the background.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/View_of_Toledo_MET_DP349564.jpg/600px-View_of_Toledo_MET_DP349564.jpg" width="100"/>
                     <li><strong>Opening of the Fifth Seal</strong> - previously called Profane Love, it was unfinished and damaged.<br>
                       The subject is from Revelation with the souls of martyrs crying out to God for justice. St. John strangely points<br>
-                      at nowhere, with naked souls behind him.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/The_Vision_of_Saint_John_MET_DT1052.jpg/600px-The_Vision_of_Saint_John_MET_DT1052.jpg"/>
+                      at nowhere, with naked souls behind him.</li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/The_Vision_of_Saint_John_MET_DT1052.jpg/600px-The_Vision_of_Saint_John_MET_DT1052.jpg" width="100"/>
                   </ul></div>
 
   </body>
